gcc/testsuite/rust/rustc/ui/issues/issue-23589.rs
fn main() {
    let v: Vec(&str) = vec!['1', '2'];
// { dg-error ".E0308." "" { target *-*-* } .-1 }
// { dg-error ".E0308." "" { target *-*-* } .-2 }
}

